[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phalp"
version = "0.1.3"
description = "PHALP: A Python package for People Tracking in 3D"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT License" }

authors = [
    { name = "Jathushan Rajasegaran", email = "jathushan@berkeley.edu" }
]

urls = { Homepage = "https://github.com/brjathu/PHALP" }

dependencies = [
    "opencv-python",
    "joblib",
    "scikit-learn",
    "pyrender",
    "dill",
    "rich",
    "einops",
    "scenedetect[opencv]",
    "hydra-core",
    "timm",
    "av",
    "smplx==0.1.28",
    "numpy",
    "detectron2 @ git+https://github.com/acjlcv/detectron2.git",
    "pytube @ git+https://github.com/pytube/pytube.git",
    "pyopengl @ git+https://github.com/mmatl/pyopengl.git",
    "chumpy @ git+https://github.com/mattloper/chumpy",
    "neural-renderer-pytorch @ git+https://github.com/acjlcv/NMR",
]

[project.optional-dependencies]
all = [
    "hmr2 @ git+https://github.com/shubham-goel/4D-Humans.git",
]
blur = [
    "facenet_pytorch",
]

[tool.setuptools.packages.find]
where = ["."]
